# database-converter

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt
cli/: main.py  menu.py
core/connectors/: __init__.py  base_connector.py  connector_factory.py  mssql_connector.py  mysql_connector.py  postgresql_connector.py
core/cron_manager/: __init__.py  cron_manager.py
core/data_migrator/: __init__.py  migrator.py  parallel_migrator.py  row_transformer.py
core/schema_mapper/: __init__.py  dependency_resolver.py  schema_builder.py  schema_extractor.py  type_mapper.py
core/validators/: __init__.py  connection_validator.py  data_validator.py  schema_validator.py
models/: database_config.py  migration_job.py
services/: migration_service.py  scheduler_service.py
storage/: control_db.py  control_db.sqlite-shm  control_db.sqlite-wal
utils/: __init__.py  batch_processor.py  config.py  logger.py
